# zipFinam

./: README.md  assets.sqlite  pyproject.toml
ai_assistant/: __init__.py  __main__.py  agent.py  cli.py  data_manager.py  executor.py  prompts.py  requirements.txt  ticker_resolver.py
examples/: .env  ingest_assets_data_grpc.py  ingest_data_grpc.py  run_simulation_daily_grpc.py
examples/algorithms/test_algo/: test_algo.py
quickstart/: .env.example  algo.py  step1_ingest_assets.py  step2_ingest_data.py  step3_run_backtest.py
zipfinam/: __init__.py  grpc_asset_data_source.py  grpc_data_source.py
zipfinam/grpc_stubs/grpc/tradeapi/v1/: trade_pb2.py
zipfinam/grpc_stubs/grpc/tradeapi/v1/accounts/: accounts_service_pb2.py
zipfinam/grpc_stubs/grpc/tradeapi/v1/auth/: auth_service_pb2_grpc.py
zipfinam/grpc_stubs/grpc/tradeapi/v1/marketdata/: marketdata_service_pb2.py  marketdata_service_pb2_grpc.py
ziplime_grpc_data_source/: __init__.py  grpc_asset_data_source.py  grpc_data_source.py
ziplime_grpc_data_source/grpc_stubs/grpc/tradeapi/v1/accounts/: accounts_service_pb2_grpc.py
ziplime_grpc_data_source/grpc_stubs/grpc/tradeapi/v1/assets/: assets_service_pb2_grpc.py
ziplime_grpc_data_source/grpc_stubs/grpc/tradeapi/v1/orders/: orders_service_pb2.py  orders_service_pb2_grpc.py
