[tool.poetry]
name = "ziplime-grpc-data-source"
version = "0.1.1"
description = ""
authors = ["nlosic@lime.co"]
readme = "README.md"
packages = [{include = "ziplime_grpc_data_source"}]

[project]
name = "ziplime-grpc-data-source"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ziplime (>=1.11.11,<2.0.0)",
    "grpcio (>=1.76.0,<2.0.0)",
    "googleapis-common-protos (>=1.72.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
