[project]
name = "zipfinam"
version = "0.2026.2.25"
description = "Ziplime data source add-on for Russian market (Finam/MOEX) via gRPC"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
keywords = ["ziplime", "finam", "moex", "trading", "algotrading", "russia", "backtesting", "grpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "ziplime>=1.11.11,<2.0.0",
    "grpcio>=1.67.0,<2.0.0",
    "googleapis-common-protos>=1.65.0,<2.0.0",
    "polars>=1.0.0",
    "aiocache>=0.12.0",
    "structlog>=24.0.0",
    "asyncclick>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/arbuzovv/zipfinam"
Repository = "https://github.com/arbuzovv/zipfinam"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zipfinam"]
