[tool.poetry]
name = "ziplime-grpc-data-source"
version = "0.1.1"
description = "Источник рыночных данных на основе gRPC для фреймворка Ziplime — подключение к API брокера Финам для торговли на российском рынке."
authors = ["nlosic@lime.co"]
readme = "README.md"
packages = [{include = "ziplime_grpc_data_source"}]
include = [
    {path = "ziplime_grpc_data_source/assets.sqlite", format = ["sdist", "wheel"]},
]
keywords = ["ziplime", "backtesting", "finam", "grpc", "trading", "russia", "quantitative"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
ziplime = ">=1.11.11,<2.0.0"
grpcio = ">=1.76.0,<2.0.0"
googleapis-common-protos = ">=1.72.0,<2.0.0"

[tool.poetry.group.ai.dependencies]
openai = ">=1.0.0"
rich = ">=13.0.0"
yfinance = ">=0.2.0"

[project]
name = "ziplime-grpc-data-source"
version = "0.1.1"
description = "Источник рыночных данных на основе gRPC для фреймворка Ziplime — подключение к API брокера Финам."
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ziplime (>=1.11.11,<2.0.0)",
    "grpcio (>=1.76.0,<2.0.0)",
    "googleapis-common-protos (>=1.72.0,<2.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "quantstats (>=0.0.81,<0.0.82)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
